--- a/chapterAPPX_SR_2019.tex
+++ b/chapterAPPX_SR_2019.tex
@@ -34,7 +34,7 @@ The source-receptor (SR) relationships give the change in air concentrations or 
 change in emissions from each emitter country.\\ 
 
 %Some additional emphasis this year has been put on the emission of condensable organics, and most of
-The tables in this appendix are based on model calculations using the \textit{EMEPwREF2.1C} dataset as described in Chapter ~\ref{ch:emis2019} and summarized in Appendix~\ref{ch:appx_emis_2019}.\\
+The tables in this appendix are based on model calculations using the EMEPwREF2.1C dataset as described in Chapter ~\ref{ch:emis2019} and summarized in Appendix~\ref{ch:appx_emis_2019}.\\
 %However, for tables related to primary particulate matter, additional tables are provided that are based on the \textit{EMEP} emission dataset as provided by CEIP. Details about these emission datasets are given in Chapters~\ref{ch:emis2019} and~\ref{ch:Condensables}, but for a quick overview, the national emission data for 2019 can be found in Appendix~\ref{ch:appx_emis_2019}, together with the expert estimates for 2019 for PPM. The expert estimates including condensable organics in GNFR sector C (EMEPwREF2.1C) are described in Chapter~\ref{chap:TNO}. The setup of the model for the source receptor model runs are described in Chapter~\ref{ch:Condensables}.\\
 
 For each country, reductions in five different pollutants have been
